--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <p>Your app description goes here.</p>
         </section>
         <section class="download">
-            <a href="https://github.com/yourusername/srm-blood-line" class="github-button">Download from GitHub</a>
+            <a href="./app/SRM Blood Line.apk" class="github-button">Download from GitHub</a>
         </section>
     </main>
     <footer>
