--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
             <p>Your app description goes here.</p>
         </section>
         <section class="download">
-            <a href="./app/SRM Blood Line.apk" class="github-button">Download from GitHub</a>
+            <a href="./app/SRM-Blood-Line.apk" class="github-button">Download from GitHub</a>
         </section>
     </main>
     <footer>
-        <p>&copy; 2023 Your Company Name</p>
+        <p>&copy; 2023 FSH, SRMIST, KTR/p>
     </footer>
 </body>
 </html>
