--- a/index.html
+++ b/index.html
@@ -1,28 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <title>SRM Blood Line</title>
-</head>
-<body>
+    <link rel="shortcut icon" href="./assets/logo.png" type="image/x-icon" />
+
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
     <header>
-        <div class="logo">
-            <img src="app-logo.png" alt="SRM Blood Line Logo">
-        </div>
-        <h1>SRM Blood Line</h1>
+      <div class="nav">
+        <ul>
+          <li>Download</li>
+          <li>How to Install</li>
+          <li>About</li>
+        </ul>
+      </div>
     </header>
-    <main>
+    <main class="container">
+      <div class="logo">
+        <img src="./assets/logo.png" alt="SRM Blood Line Logo" width="100px" />
+      </div>
+      <div class="content">
+        <h1>SRM Blood Line</h1>
         <section class="description">
-            <p>Your app description goes here.</p>
+          <p>
+            developed by the Faculty of Science and Humanities at SRMIST, KTR,
+            is a revolutionary mobile application designed to bridge the crucial
+            gap between blood donors and those in need. This innovative app
+            leverages cutting-edge technology and human compassion to create a
+            vibrant and life-saving community.
+          </p>
         </section>
         <section class="download">
-            <a href="./app/SRM-Blood-Line.apk" class="github-button">Download from GitHub</a>
+          <a href="./app/SRM-Blood-Line.apk" class="github-button"
+            >Download</a
+          >
         </section>
+      </div>
     </main>
     <footer>
-        <p>&copy; 2023 FSH, SRMIST, KTR/p>
+      <p>&copy; 2023 FSH, SRMIST, KTR</p>
     </footer>
-</body>
+  </body>
 </html>
